Refactor services to remove unused fields and improve clarity